	       JSBML NEWS -- History of user-visible changes

======================================================================
Version 0.8.0 (15-05-2012)
======================================================================

* Bug Fixes:
	       
  - There is now a rounding correction for multipliers when merging units
    that tries to shift multipliers to the scale of a unit. This can only
    be done if the logarithm to the base 10 of the multiplier is nearly
    an integer number. Nearly means that the distance to the next integer
    is not larger than the ensured double precision.

  - [Tracker item #3511439] : The cloning of a Species was not copying the
    speciesType attribute. Thanks to Thomas Bernard who noticed and reported
    the problem.

  - The units attribute on ASTNode was sometime not written out and the sbml
    namespace was sometime missing from the mathML. It should be fine now.

* Known issues :

  - Reading of more than one RDF Description elements in the RDF annotation 
    block (the official SBML annotation scheme) is not supported at the 
    moment. Planned for the next major release. 
  - The RDF block at the top level of the annotation is considered to be the
    official SBML annotation.
  - SBML L3 packages are not supported and not kept.  
  
======================================================================
Version 0.8-rc2 (12-04-2012)
======================================================================

* User visible changes :

  - Major improvements of the reading and writing speed for large models.

* Bug Fixes:

  - It was forgotten to implement an unsetSubstanceUnits method on the Model
    class. Thanks to Robert Byrnes for reporting this problem.
  
  - In the Reaction class, the setReversible method only accepted Boolean,
    no boolean.
  
  - Several bug fixes and improvements to units derivation, merging and
    simplifying.
    
  - There was a bug in KineticLaw that prevented a correct iteration