@@ -4,6 +4,14 @@
 Version 0.8.0 (15-05-2012)
 ======================================================================
 
+* New Features:
+  
+  - The new specialized EventObject TreeNodeRemovedEvent has been
+    implemented in order to make sure that deleted nodes do no longer
+    have a pointer to their previous parent within the tree. At the
+    same time, it is still possible to identify their previous
+    location using the field in the new EventObject.
+
 * Bug Fixes:
 	       
   - There is now a rounding correction for multipliers when merging units
